Small changes to scripting engine

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -93,6 +93,10 @@ mqttSettingsPath = /etc/homegear/mqtt.conf
 # Default: physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
 physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
 
+# Path to php.ini.
+# Default: phpIniPath = /etc/homegear/php.ini
+phpIniPath = /etc/homegear/php.ini
+
 # Path to the GPIO root directory. Only relevant if one of the physical devices needs GPIO access.
 # Default: gpioPath = /sys/class/gpio
 gpioPath = /sys/class/gpio
