Fixed: CCU2 does not show config parameters

--- a/misc/Config Directory/physicalinterfaces.conf
+++ b/misc/Config Directory/physicalinterfaces.conf
@@ -7,24 +7,24 @@ ___________________________________________________________________________
 ################# CUL #################
 #######################################
 
-# The device family this interface is for
-[HomeMaticBidCoS]
+## The device family this interface is for
+#[HomeMaticBidCoS]
 
-# Specify an unique id here to identify this device in Homegear
-id = My-CUL
+## Specify an unique id here to identify this device in Homegear
+#id = My-CUL
 
-# When default is set to "true" Homegear will assign this device
-# to new peers.
-default = true
+## When default is set to "true" Homegear will assign this device
+## to new peers.
+#default = true
 
-# Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
-deviceType = cul
+## Options: cul, cc1100, coc, cuno, hmcfglan, hmlgw
+#deviceType = cul
 
-device = /dev/ttyACM0
+#device = /dev/ttyACM0
 
-# Default: responseDelay = 95
-# Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
-responseDelay = 95
+## Default: responseDelay = 95
+## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
+#responseDelay = 95
 
 #######################################
 ### HomeMatic Wireless LAN Gateway  ###
