--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -65,7 +65,7 @@ contentPath = /var/lib/homegear/www/rpc
 # Enable Homegear's build-in WebSocket server on this port
 # WARNING: Enabling Websockets without authentication is a high security risk!
 # Default: false
-webSocket = false
+webSocket = true
 
 # Set ssl to "true" to enable SSL support
 ssl = true
