Temp directory clean up and log method in scripting engine

--- a/misc/Config Directory/physicalinterfaces.conf
+++ b/misc/Config Directory/physicalinterfaces.conf
@@ -341,7 +341,7 @@ ___________________________________________________________________________
 #######################################
 
 ## The device family this interface is for
-#[MAX]
+#[MAX!]
 
 ## Specify an unique id here to identify this device in Homegear
 #id = My-MAX-CUL
@@ -363,7 +363,7 @@ ___________________________________________________________________________
 #######################################
 
 ## The device family this interface is for
-#[MAX]
+#[MAX!]
 
 ## Specify an unique id here to identify this device in Homegear
 #id = My-MAX-CC1101
