--- a/misc/Config Directory/php.ini
+++ b/misc/Config Directory/php.ini
@@ -1417,7 +1417,7 @@ session.save_handler = files
 ; where MODE is the octal representation of the mode. Note that this
 ; does not overwrite the process's umask.
 ; http://php.net/session.save-path
-session.save_path = "/tmp"
+session.save_path = "/var/lib/homegear/tmp/php"
 
 ; Whether to use strict session mode.
 ; Strict session mode does not accept uninitialized session ID and regenerate
