Support for TI CC1190 high gain mode

--- a/misc/Config Directory/physicalinterfaces.conf
+++ b/misc/Config Directory/physicalinterfaces.conf
@@ -214,6 +214,18 @@ ___________________________________________________________________________
 ## The GPIO GDO0 or GDO2 is connected to. Specify which GDO to use above.
 #gpio1 = 23
 
+### Additional TI CC1190 Config ###
+
+## The GPIO high gain mode of the CC1190 is connected to.
+## Default: -1 (disabled)
+#gpio2 = 5
+
+## The hexadecimal value for the PATABLE of the TI CC1101.
+## Default:
+## - Without high gain mode: 0xC2
+## - With high gain mode: 0x27 (maximum legally allowed setting)
+#txPowerSetting = 0x27
+
 ___________________________________________________________________________
 
 ----------------------------- HomeMatic Wired -----------------------------
