GPIO support in PHP

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -101,6 +101,9 @@ phpIniPath = /etc/homegear/php.ini
 # Default: gpioPath = /sys/class/gpio
 gpioPath = /sys/class/gpio
 
+# Export these GPIOs and set permissions when running Homegear with "-s".
+# exportGpios = 5, 6, 7
+
 # Path to scripts which can be executed by calling "runScript"
 # Default: scriptPath = /var/lib/homegear/scripts
 scriptPath = /var/lib/homegear/scripts
