Added base library version check

--- a/configure.ac
+++ b/configure.ac
@@ -2,8 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ([2.69])
-# Version auto generation is possible with: m4_esyscmd([build-aux/git-version-gen .tarball-version])
-AC_INIT(homegear, 0.6.0, sathya@laufers.net)
+AC_INIT(homegear, m4_esyscmd_s([./getVersion.sh]), sathya@laufers.net)
 AC_CONFIG_AUX_DIR(cfg)
 AM_INIT_AUTOMAKE
 AC_CONFIG_SRCDIR([src/main.cpp])
