--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -1,5 +1,11 @@
 # Homegear configuration file
 
+# Default: runAsUser = root
+# runAsUser = homegear
+
+# Default: runAsGroup = root
+# runAsGroup = homegear
+
 # Default: debugLevel = 3
 debugLevel = 4
 
