Removed autotools files

--- a/misc/Config Directory/physicalinterfaces.conf
+++ b/misc/Config Directory/physicalinterfaces.conf
@@ -73,6 +73,12 @@ ___________________________________________________________________________
 ## Should be "95" for CUL or COC, "100" for TI CC1101 and "60" for HM-CFG-LAN or HM-LGW
 #responseDelay = 60
 
+## Default: sendFix = false
+## Some LAN-Gateways do not send packets correctly. If sent packets are not received by the
+## devices (you get error messages, that packets were not received after 3 retries), set
+## sendFix to true.
+#sendFix = false
+
 #######################################
 ############# HM-CFG-LAN  #############
 #######################################
