Removed autotools files

--- a/.gitignore
+++ b/.gitignore
@@ -54,3 +54,25 @@ autom4te.cache
 config.log
 homegear
 core
+vgcore.*
+
+#Autotools
+#autoscan.*
+#Makefile
+#Makefile.in
+#aclocal.m4
+#autom4te.cache/
+#config.*
+#configure
+#depcomp
+#install-sh
+#libtool
+#ltmain.sh
+#m4/
+#missing
+#stamp-h?
+#.deps/
+#.dirstamp
+#.libs/
+#*.l[ao]
+#*~
