--- a/.gitignore
+++ b/.gitignore
@@ -57,22 +57,22 @@ core
 vgcore.*
 
 #Autotools
-#autoscan.*
-#Makefile
-#Makefile.in
-#aclocal.m4
-#autom4te.cache/
-#config.*
-#configure
-#depcomp
-#install-sh
-#libtool
-#ltmain.sh
-#m4/
-#missing
-#stamp-h?
-#.deps/
-#.dirstamp
-#.libs/
-#*.l[ao]
-#*~
+autoscan.*
+Makefile
+Makefile.in
+aclocal.m4
+autom4te.cache/
+config.*
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4/
+missing
+stamp-h?
+.deps/
+.dirstamp
+.libs/
+*.l[ao]
+*~
