--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -95,9 +95,9 @@ serverSettingsPath = /etc/homegear/rpcservers.conf
 # Default: mqttSettingsPath = /etc/homegear/mqtt.conf
 mqttSettingsPath = /etc/homegear/mqtt.conf
 
-# Path to the physical interface settings file.
-# Default: physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
-physicalInterfaceSettingsPath = /etc/homegear/physicalinterfaces.conf
+# Path to the device family config files.
+# Default: familyConfigPath = /etc/homegear/families
+familyConfigPath = /etc/homegear/families
 
 # Path to php.ini.
 # Default: phpIniPath = /etc/homegear/php.ini
