--- a/misc/Config Directory/rpcservers.conf
+++ b/misc/Config Directory/rpcservers.conf
@@ -37,6 +37,14 @@ ssl = false
 # Default: authType = basic
 authType = none
 
+# You can specify the websocket authentication type here. Never ever use basic auth
+# over an unencrypted connection!
+# Can be one of the following: none, basic, session
+# "session" checks for the PHP session variable "authorized", which must be set to
+# "true" for the authentication to succeed.
+# Default: webSocketAuthType = session
+webSocketAuthType = session
+
 [RPCServer2]
 # Interface to bind the RPC server to. By default IPv4 and IPv6 are
 # enabled. If you want to only use IPv4 set "interface" to "0.0.0.0".
@@ -81,7 +89,7 @@ authType = none
 # Can be one of the following: none, basic, session
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
-# Default: authType = session
+# Default: webSocketAuthType = session
 webSocketAuthType = session
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
@@ -133,7 +141,7 @@ authType = basic
 # Can be one of the following: none, basic, session
 # "session" checks for the PHP session variable "authorized", which must be set to
 # "true" for the authentication to succeed.
-# Default: authType = session
+# Default: webSocketAuthType = session
 webSocketAuthType = session
 
 # The size in bit of the temporary Diffie-Hellman parameters generated at start up.
