--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -13,6 +13,10 @@ debugLevel = 4
 # Default: devLog = false
 devLog = false
 
+# Set to false to disable core dumps. Currently to make fixing errors easier, core dumps are enabled by default.
+# Default: enableCoreDumps = true
+enableCoreDumps = true
+
 # If databasePath is empty, the executable path is used
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
