--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -9,6 +9,9 @@
 # Default: debugLevel = 3
 debugLevel = 4
 
+# Default: memoryDebugging = false
+memoryDebugging = true
+
 # Prints log information helping in fixing errors
 # Default: devLog = false
 devLog = false
