Thread management, event handler now queues events, new HomeMatic BidCoS XML files

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -165,6 +165,9 @@ prioritizeThreads = true
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
+# Default: scriptEngineServerMaxConnections = 10
+scriptEngineServerMaxConnections = 10
+
 # Default: cliServerMaxConnections = 50
 cliServerMaxConnections = 50
 
@@ -210,14 +213,14 @@ packetReceivedThreadPriority = 0
 packetReceivedThreadPolicy = SCHED_OTHER
 
 # Default: eventMaxThreads = 20
-eventMaxThreads = 20
+eventThreadCount = 5
 
-# Default: eventTriggerThreadPriority = 0
-eventTriggerThreadPriority = 0
+# Default: eventThreadPriority = 0
+eventThreadPriority = 0
 
-# Default: eventTriggerThreadPolicy = SCHED_OTHER
+# Default: eventThreadPolicy = SCHED_OTHER
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
-eventTriggerThreadPolicy = SCHED_OTHER
+eventThreadPolicy = SCHED_OTHER
 
 # Default: scriptMaxThreads = 10
 scriptMaxThreads = 30
