Increased size of secure memory

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -165,6 +165,9 @@ prioritizeThreads = true
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
+# Default scriptEngineThreadCount = 10
+scriptEngineThreadCount = 10
+
 # Default: scriptEngineServerMaxConnections = 10
 scriptEngineServerMaxConnections = 10
 
@@ -221,6 +224,3 @@ eventThreadPriority = 0
 # Default: eventThreadPolicy = SCHED_OTHER
 # Valid policies: SCHED_OTHER, SCHED_BATCH, SCHED_IDLE, SCHED_FIFO, SCHED_RR
 eventThreadPolicy = SCHED_OTHER
-
-# Default: scriptMaxThreads = 10
-scriptMaxThreads = 30
