--- a/misc/Config Directory/mqtt.conf
+++ b/misc/Config Directory/mqtt.conf
@@ -20,6 +20,10 @@ clientName = Homegear
 # Homegear installations.
 homegearId = 1234-5678-9abc
 
+# Tells the MQTT server to retain received MQTT messages. New clients will then
+# receive the last value of a topic on connection.
+retain = true
+
 # When authentication by username and password is enabled, uncomment the
 # following two lines.
 #userName = myUser
