--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -165,6 +165,12 @@ prioritizeThreads = true
 # Default: workerThreadWindow = 3000
 workerThreadWindow = 3000
 
+# Default scriptEngineMaxThreadsPerScript = 4
+scriptEngineMaxThreadsPerScript = 4
+
+# Default scriptEngineMaxScriptsPerProcess = -1
+scriptEngineMaxScriptsPerProcess = -1
+
 # Default scriptEngineThreadCount = 10
 scriptEngineThreadCount = 10
 
