New config parameter "socketPath"

--- a/misc/Config Directory/main.conf
+++ b/misc/Config Directory/main.conf
@@ -20,11 +20,15 @@ devLog = false
 # Default: enableCoreDumps = true
 enableCoreDumps = true
 
-# If databasePath is empty, the executable path is used
+# The socket files are placed into this directory. If socketPath is empty, the executable path is used.
+# Default: socketPath =
+socketPath = /var/run/homegear
+
+# If databasePath is empty, the executable path is used.
 # Default: databasePath =
 databasePath = /var/lib/homegear/db.sql
 
-# If databaseMemoryJournal is set to true database write operations are faster but if your system
+# If databaseMemoryJournal is set to true, database write operations are faster but if your system
 # suffers a power loss the database might get corrupted.
 # Default: databaseMemoryJournal = false
 databaseMemoryJournal = false
